# Basic-Otus-python-homework

./: README.md  requirements.txt
homework_01/: main.py
homework_02/: __init__.py  base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  pyproject.toml
homework_03/WebApp/: app.py
homework_04/: README.md  __init__.py  config.py  docker-compose.yaml  jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: Cookies.html  about.html  base.html  index.html
homework_06/: Dockerfile  config.py  docker-compose.yaml  main.py  prestart.sh  requirements.txt
homework_06/migrations/versions/: da268611d782_create_id_post_user_table_black.py
homework_06/models/: __init__.py  database.py  post.py
homework_06/templates/: Cookies.html  base.html  index.html
homework_06/templates/post/: add_post.html  one_post.html  posts.html
homework_06/views/: posts.py
homework_06/views/forms/: post.py
